Fixing nav problem with overlaping theme form, small fix to respnsible themes view

--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -26,12 +26,12 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      z-index: 9999;
-      opacity: 0;
       cursor: pointer;
+
+      z-index: 1050;
     }
 
-    // Black transparent background cirlce
+    // Resizing background
     &-background {
       position: absolute;
       width: 100%;
@@ -40,6 +40,7 @@
       transition: all 0.85s;
       background-color: rgba(0, 0, 0, 0.4);
       transform: scale(1);
+      pointer-events: none;
     }
 
     // Adds 3 white lines on background
@@ -92,10 +93,6 @@
       height: 150rem;
       transform: scale(6);
     }
-
-    &-checkbox:checked .form {
-      display: grid;
-    }
   }
 
   // Container creating circle
@@ -104,7 +101,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    z-index: 1000;
+    z-index: 950;
 
     width: 100%;
     height: 100%;
@@ -112,12 +109,10 @@
 
   // Nav from themes to entry view
   &__back {
-    grid-column: 6 / span 2;
-    grid-row: 1 / 2;
-
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10rem;
 
     span {
       cursor: pointer;
