--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -31,7 +31,7 @@
     transition: transform 0.4s;
 
     &--hidden {
-      transform: translateY(-20vh);
+      transform: translateY(-200rem);
     }
 
     &__input {
